# RAG-ChatBot

./: .gitattributes  main.py  pyproject.toml  requirements.txt  store.py
src/: helper.py  prompts.py
template/: chat.html
